Fixed several accessibility issues.

--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -37,37 +37,37 @@
         <div class="form-group">
             <div class="toolbox-btn" title="Font weight"
                 data-bind="css: { 'toolbox-btn-is-active': fontWeight }, tooltip: currentWeight">
-                <a href="#" data-bind="click: toggleBold" aria-label="Change font weight">
+                <a href="#" role="button" data-bind="click: toggleBold" aria-label="Change font weight">
                     <i class="paperbits-icon paperbits-bold"></i>
                 </a>
             </div>
             <div class="toolbox-btn" title="Font style"
                 data-bind="css: { 'toolbox-btn-is-active': fontStyle }, tooltip: currentStyle">
-                <a href="#" data-bind="click: toggleItalic" aria-label="Change font style">
+                <a href="#" role="button" data-bind="click: toggleItalic" aria-label="Change font style">
                     <i class="paperbits-icon paperbits-italic"></i>
                 </a>
             </div>
             <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'left' }"
                 title="Align left">
-                <a href="#" data-bind="click: alignLeft" aria-label="Align text left">
+                <a href="#" role="button" data-bind="click: alignLeft" aria-label="Align text left">
                     <i class="paperbits-icon paperbits-align-left-2"></i>
                 </a>
             </div>
             <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'center' }"
                 title="Align center">
-                <a href="#" data-bind="click: alignCenter" aria-label="Align text center">
+                <a href="#" role="button" data-bind="click: alignCenter" aria-label="Align text center">
                     <i class="paperbits-icon paperbits-align-center"></i>
                 </a>
             </div>
             <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'right' }"
                 title="Align right">
-                <a href="#" data-bind="click: alignRight" aria-label="Align text right">
+                <a href="#" role="button" data-bind="click: alignRight" aria-label="Align text right">
                     <i class="paperbits-icon paperbits-align-right-2"></i>
                 </a>
             </div>
             <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'justify' }"
                 title="Justify">
-                <a href="#" data-bind="click: justify" aria-label="Justify text">
+                <a href="#" role="button" data-bind="click: justify" aria-label="Justify text">
                     <i class="paperbits-icon paperbits-align-justify"></i>
                 </a>
             </div>
