Added font-family editor.

--- a/src/workshops/colors/colorEditor.html
+++ b/src/workshops/colors/colorEditor.html
@@ -1,4 +1,4 @@
-<fieldset class="form flex-item flex-item-grow" data-bind="scrollable: true">
+<div class="form flex-item flex-item-grow" data-bind="scrollable: true">
     <div class="form-group">
         <button class="btn btn-info" type="button" data-bind="tooltip: 'Name of the color'"></button>
         <label for="colorName">Color name</label>
@@ -11,4 +11,4 @@
         <div data-bind="colorPicker: { selectedColor: colorValue }"></div>
         <!-- /ko -->
     </div>
-</fieldset>
+</div>
