--- a/src/workshops/fonts/fontSelector.html
+++ b/src/workshops/fonts/fontSelector.html
@@ -6,13 +6,13 @@
 
     <div class="flex flex-column flex-item flex-item-grow fonts" role="list">
         <a href="#" role="listitem" class="list-item font-box" title="Clear font" data-bind="click: $component.clearFonts, focus: true">
-            <span class="font-family">
+            <span class="font">
                 (Inherit)
             </span>
         </a>
         <!-- ko foreach: { data: fonts, as: 'font' } -->
         <a href="#" role="listitem" class="list-item font-box" data-bind="css: { selected: font === $component.selectedFont() }, click: $component.selectFont">
-            <span class="font-family" data-bind="text: font.displayName, style: { 'font-family': font.family }"></span>
+            <span class="font" data-bind="text: font.displayName, style: { 'font-family': font.family }"></span>
         </a>
         <!--/ko -->
     </div>
