--- a/src/workshops/gradients/gradientEditor.html
+++ b/src/workshops/gradients/gradientEditor.html
@@ -1,4 +1,4 @@
-<fieldset class="form flex-item flex-item-grow" data-bind="scrollable: true">
+<div class="form flex-item flex-item-grow" data-bind="scrollable: true">
     <!-- ko if: gradientViewModel() -->
     <div class="form-group form-group-collapsible">
         <label class="form-label">
@@ -69,4 +69,4 @@
         </div>
     </div>
     <!-- /ko -->
-</fieldset>
+</div>
