--- a/src/workshops/gradients/colorStopEditor.html
+++ b/src/workshops/gradients/colorStopEditor.html
@@ -1,4 +1,4 @@
-<fieldset class="pickr-dialog form flex-item flex-item-grow">
+<div class="pickr-dialog form flex-item flex-item-grow">
     <div class="color-picker">
          <!-- ko if: colorValue -->
          <div data-bind="colorPicker: { selectedColor: colorValue }"></div>
@@ -11,4 +11,4 @@
             Delete color stop
         </button>
     </div>
-</fieldset>
+</div>
