--- a/src/workshops/icons/glyph-import/glyph-import.html
+++ b/src/workshops/icons/glyph-import/glyph-import.html
@@ -1,11 +1,11 @@
 <div class="flex flex-column no-overflow ">
-    <fieldset class="flex-item form">
+    <div class="flex-item form">
         <div class="form-group">
             <input class="form-control" type="search" role="searchbox"
                 data-bind="textInput: searchPattern, valueUpdate: 'keyup', focus: true" placeholder="Search icons..."
                 aria-label="Search widgets" aria-controls="searchResult" />
         </div>
-    </fieldset>
+    </div>
 
     <div class="flex-item flex-item-grow" role="list" data-bind="scrollable: true">
         <!-- ko foreach: { data: categories, as: 'category' } -->
