--- a/src/workshops/icons/glyph-selector/glyph-selector.html
+++ b/src/workshops/icons/glyph-selector/glyph-selector.html
@@ -4,13 +4,13 @@
     </h1>
     <hr />
 
-    <fieldset class="flex-item form">
+    <div class="flex-item form">
         <div class="form-group">
             <input class="form-control" type="search" role="searchbox"
                 data-bind="textInput: searchPattern, valueUpdate: 'keyup', focus: true" placeholder="Search icons..."
                 aria-label="Search widgets" aria-controls="searchResult" />
         </div>
-    </fieldset>
+    </div>
 
     <style data-bind="html: compiledFontStyles"></style>
 
