--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -1,4 +1,4 @@
-<fieldset class="form flex-item flex-item-grow" data-bind="scrollable: true">
+<div class="form flex-item flex-item-grow" data-bind="scrollable: true">
     <div class="form-group form-group-collapsible">
         <label class="form-label">
             <a href="#" class="form-group-toggle" title="Toggle section"
@@ -48,4 +48,4 @@
     <!-- /ko -->
 
     <!-- /ko -->
-</fieldset>
+</div>
