Fixed color and gradient selectors.

--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -22,14 +22,14 @@
 
             <div class="tab" data-bind="css: { 'tab-is-active': colorKey }">
                 <a href="#" role="button" aria-label="Background color" aria-haspopup="true"
-                    data-bind="tooltip: 'Background color', balloon: { component: { name: 'color-selector', params: { onSelect: $component.onColorSelected, selectedColor: $component.color } } }">
+                    data-bind="tooltip: 'Background color', balloon: { component: { name: 'color-selector', params: { selectedColorKey: $component.colorKey, onSelect: $component.onColorSelected } } }">
                     <i class="paperbits-icon paperbits-paint-bucket-40"></i>
                 </a>
             </div>
 
             <div class="tab" data-bind="css: { 'tab-is-active': gradientKey }">
                 <a href="#" role="button" aria-label="Background gradient" aria-haspopup="true"
-                    data-bind="tooltip: 'Background gradient', balloon: { component: { name: 'gradient-selector', params: { onSelect: $component.onGradientSelected, selectedGradient: $component.gradientKey } } }">
+                    data-bind="tooltip: 'Background gradient', balloon: { component: { name: 'gradient-selector', params: { onSelect: $component.onGradientSelected, selectedGradientKey: $component.gradientKey } } }">
                     <i class="paperbits-icon paperbits-gradient"></i>
                 </a>
             </div>
