--- a/src/workshops/colors/colorSelector.html
+++ b/src/workshops/colors/colorSelector.html
@@ -3,15 +3,15 @@
     <hr/>
 
     <div class="palette" role="list">
-        <div class="color-box" data-bind="css: { selected: !$component.selectedColor() }">
-            <a href="#" role="listitem" title="Clear color" class="color" data-bind="click: $component.clearColors, focus: true">
+        <div class="color-box" data-bind="css: { selected: !$component.selectedColorKey() }, tooltip: 'Clear color'">
+            <a href="#" role="listitem" class="color" data-bind="click: $component.clearColors, focus: true">
                 <i class="paperbits-icon paperbits-ban"></i>
             </a>
         </div>
 
         <!-- ko foreach: { data: colors, as: 'color' } -->
-        <div class="color-box" data-bind="css: { selected: color === $component.selectedColor() }">
-            <a href="#" role="listitem" class="color pseudo-transparent-bckg" data-bind="click: $component.selectColor, attr: { title: color.displayName }">
+        <div class="color-box" data-bind="css: { selected: color.key === $component.selectedColorKey() }, tooltip: color.displayName">
+            <a href="#" role="listitem" class="color pseudo-transparent-bckg" data-bind="click: $component.selectColor">
                 <span class="fit" data-bind="style: { background: color.value }"></span>
             </a>
         </div>
