--- a/src/workshops/gradients/gradientSelector.html
+++ b/src/workshops/gradients/gradientSelector.html
@@ -4,14 +4,14 @@
 
     <div class="palette" role="list">
         <div class="color-box" data-bind="css: { selected: !$component.selectedGradientKey() }, tooltip: 'Clear gradient'">
-            <a href="#" class="color" data-bind="click: $component.clearGradients, focus: true">
+            <a href="#" role="listitem" class="color" data-bind="click: $component.clearGradients, focus: true">
                 <i class="paperbits-icon paperbits-ban"></i>
             </a>
         </div>
 
         <!-- ko foreach: { data: gradients, as: 'gradient' } -->
         <div class="color-box" data-bind="css: { selected: gradient.key === $component.selectedGradientKey() }, tooltip: gradient.displayName">
-            <a href="#" class="color" data-bind="click: $component.selectGradient, style: { background: gradient.value }"></a>
+            <a href="#" role="listitem" class="color" data-bind="click: $component.selectGradient, style: { background: gradient.value }"></a>
         </div>
         <!--/ko -->
     </div>
