--- a/src/workshops/googleFonts/googleFonts.html
+++ b/src/workshops/googleFonts/googleFonts.html
@@ -23,7 +23,7 @@
 </div>
 
 <div class="flex-item btn-group">
-    <button class="btn" data-bind="click: uploadFont">
+    <button class="btn btn-default" data-bind="click: uploadFont">
         <i class="paperbits-icon paperbits-square-upload"></i>
         Upload font
     </button>
