--- a/src/workshops/shadows/shadowEditorGroup.html
+++ b/src/workshops/shadows/shadowEditorGroup.html
@@ -7,7 +7,7 @@
     <div id="shadowCollapse" class="collapse form-group-collapse">
         <div class="form-group">
             <label for="shadowType">Type</label>
-            <button id="shadowType" class="btn" data-bind="text: $component.displayName, balloon: { component: { name: 'shadow-selector', params: { onSelect: $component.onShadowSelected, selectedShadow: $component.shadowKey } } }"></button>
+            <button id="shadowType" class="btn btn-default" data-bind="text: $component.displayName, balloon: { component: { name: 'shadow-selector', params: { onSelect: $component.onShadowSelected, selectedShadow: $component.shadowKey } } }"></button>
         </div>
     </div>
 </div>
