--- a/src/workshops/snippets/styleSnippetSelector.html
+++ b/src/workshops/snippets/styleSnippetSelector.html
@@ -13,7 +13,7 @@
         </ul>
 
         <div class="flex-item btn-group">
-            <button class="btn" data-bind="click: addSnippet, enable: !!selectedSnippet()">
+            <button class="btn btn-default" data-bind="click: addSnippet, enable: !!selectedSnippet()">
                 <i class="paperbits-icon paperbits-simple-add"></i> Add
             </button>
         </div>
