--- a/src/workshops/gradients/colorStopEditor.html
+++ b/src/workshops/gradients/colorStopEditor.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="flex-item btn-group">
-        <button class="btn" data-bind="click: deleteColorStop">
+        <button class="btn btn-default" data-bind="click: deleteColorStop">
             <i class="paperbits-icon paperbits-simple-remove"></i>
             Delete color stop
         </button>
