--- a/src/workshops/icons/glyph-selector/glyph-selector.html
+++ b/src/workshops/icons/glyph-selector/glyph-selector.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="flex-item btn-group">
-        <button class="btn" data-bind="click: $component.selectNone">
+        <button class="btn btn-default" data-bind="click: $component.selectNone">
             <i class="paperbits-icon paperbits-ban"></i>
             None
         </button>
