--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -8,7 +8,7 @@
     <div id="typographyCollapse" class="collapse form-group-collapse">
         <div class="form-group">
             <label for="fontFamily">Font family</label>
-            <button id="fontFamily" class="btn"
+            <button id="fontFamily" class="btn btn-default"
                 data-bind="text: $component.fontName, balloon: { component: { name: 'font-selector', params: { onSelect: $component.onFontSelected } } }">
             </button>
         </div>
@@ -76,14 +76,14 @@
 
         <div class="form-group">
             <label for="textColor">Text color</label>
-            <button id="textColor" class="btn"
+            <button id="textColor" class="btn btn-default"
                 data-bind="text: $component.colorName, balloon: { component: { name: 'color-selector', params: { selectedColorKey: $component.colorKey, onSelect: $component.onColorSelected } } }">
             </button>
         </div>
 
         <div class="form-group">
             <label for="textShadow">Text shadow</label>
-            <button id="textShadow" class="btn"
+            <button id="textShadow" class="btn btn-default"
                 data-bind="text: $component.shadowName, balloon: { component: { name: 'shadow-selector', params: { onSelect: $component.onShadowSelected } } }">
             </button>
         </div>
