--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -347,7 +347,7 @@
                 <!--/ko-->
                 <div class="style-card style-card-empty">
                     <!-- <a href="#" class="btn-round" data-bind="balloon: { component: { name: 'style-snippet-selector', params: { snippetType: 'components/' + item.name, onSelect: $component.onSnippetSelected } } }">
-                        <i class="paperbits-icon paperbits-color"></i>
+                        <i aria-hidden="true" class="paperbits-icon paperbits-color"></i>
                     </a> -->
                     <button class="btn-round" data-bind="click: $component.openInEditor.bind($data, item.name)"
                         aria-label="Add variation"></button>
