--- a/src/workshops/border/borderEditor.html
+++ b/src/workshops/border/borderEditor.html
@@ -18,7 +18,7 @@
         <div class="palette">
             <div class="color-box" data-bind="css: { selected: !$component.borderColorKey() }">
                 <a href="#" title="Clear color" class="color" role="button" data-bind="click: $component.clearColor">
-                    <i class="paperbits-icon paperbits-ban"></i>
+                    <i aria-hidden="true" class="paperbits-icon paperbits-ban"></i>
                 </a>
             </div>
 
