--- a/src/workshops/colors/colorSelector.html
+++ b/src/workshops/colors/colorSelector.html
@@ -5,7 +5,7 @@
     <div class="palette" role="list">
         <div class="color-box" data-bind="css: { selected: !$component.selectedColorKey() }, tooltip: 'Clear color'">
             <a href="#" role="listitem" class="color" data-bind="click: $component.clearColors, focus: true">
-                <i class="paperbits-icon paperbits-ban"></i>
+                <i aria-hidden="true" class="paperbits-icon paperbits-ban"></i>
             </a>
         </div>
 
