--- a/src/workshops/gradients/gradientEditor.html
+++ b/src/workshops/gradients/gradientEditor.html
@@ -60,7 +60,7 @@
                         <!-- /ko -->
                         <div class="color-box">
                             <a href="#" title="Add color stop" class="color" data-bind="click: $component.addColor">
-                                <i class="paperbits-icon paperbits-simple-add"></i>
+                                <i aria-hidden="true" class="paperbits-icon paperbits-simple-add"></i>
                             </a>
                         </div>
                     </div>
