--- a/src/workshops/snippets/styleSnippetSelector.html
+++ b/src/workshops/snippets/styleSnippetSelector.html
@@ -14,7 +14,7 @@
 
         <div class="flex-item btn-group">
             <button class="btn btn-default" data-bind="click: addSnippet, enable: !!selectedSnippet()">
-                <i class="paperbits-icon paperbits-simple-add"></i> Add
+                <i aria-hidden="true" class="paperbits-icon paperbits-simple-add"></i> Add
             </button>
         </div>
     </div>
