--- a/src/workshops/container/container.html
+++ b/src/workshops/container/container.html
@@ -11,15 +11,15 @@
             <label>Horizontal</label>
             <a href="#" class="toolbox-btn" role="button"
                 data-bind="click: alignLeft, css: { 'toolbox-btn-is-active': horizontalAlignment() === 'start' }, tooltip: 'Align left'">
-                <i class="paperbits-icon paperbits-align-left"></i>
+                <i aria-hidden="true" class="paperbits-icon paperbits-align-left"></i>
             </a>
             <a href="#" class="toolbox-btn" role="button"
                 data-bind="click: alignCenter, css: { 'toolbox-btn-is-active': horizontalAlignment() === 'center' || horizontalAlignment() === 'around' || horizontalAlignment() === 'between' }, tooltip: 'Align center or distribute'">
-                <i class="paperbits-icon paperbits-align-center-horizontal"></i>
+                <i aria-hidden="true" class="paperbits-icon paperbits-align-center-horizontal"></i>
             </a>
             <a href="#" class="toolbox-btn" role="button"
                 data-bind="click: alignRight, css: { 'toolbox-btn-is-active': horizontalAlignment() === 'end' }, tooltip: 'Align right'">
-                <i class="paperbits-icon paperbits-align-right"></i>
+                <i aria-hidden="true" class="paperbits-icon paperbits-align-right"></i>
             </a>
         </div>
 
@@ -27,15 +27,15 @@
             <label>Vertical</label>
             <a href="#" class="toolbox-btn" role="button"
                 data-bind="click: alignTop, css: { 'toolbox-btn-is-active': verticalAlignment() === 'start' }, tooltip: 'Align top'"">
-                <i class="paperbits-icon paperbits-align-top"></i>
+                <i aria-hidden="true" class="paperbits-icon paperbits-align-top"></i>
             </a>
             <a href="#" class="toolbox-btn" role="button"
                 data-bind="click: alignMiddle, css: { 'toolbox-btn-is-active': verticalAlignment() === 'center' || verticalAlignment() === 'around' || verticalAlignment() === 'between' }, tooltip: 'Align center or distribute'">
-                <i class="paperbits-icon paperbits-align-center-vertical"></i>
+                <i aria-hidden="true" class="paperbits-icon paperbits-align-center-vertical"></i>
             </a>
             <a href="#" class="toolbox-btn" role="button"
                 data-bind="click: alignBottom, css: { 'toolbox-btn-is-active': verticalAlignment() === 'end' }, tooltip: 'Align bottom'"">
-                <i class="paperbits-icon paperbits-align-bottom"></i>
+                <i aria-hidden="true" class="paperbits-icon paperbits-align-bottom"></i>
             </a>
         </div>
     </div>
