--- a/src/workshops/googleFonts/googleFonts.html
+++ b/src/workshops/googleFonts/googleFonts.html
@@ -24,7 +24,7 @@
 
 <div class="flex-item btn-group">
     <button class="btn btn-default" data-bind="click: uploadFont">
-        <i class="paperbits-icon paperbits-square-upload"></i>
+        <i aria-hidden="true" class="paperbits-icon paperbits-square-upload"></i>
         Upload font
     </button>
 </div>
