--- a/src/workshops/gradients/colorStopEditor.html
+++ b/src/workshops/gradients/colorStopEditor.html
@@ -7,7 +7,7 @@
 
     <div class="flex-item btn-group">
         <button class="btn btn-default" data-bind="click: deleteColorStop">
-            <i class="paperbits-icon paperbits-simple-remove"></i>
+            <i aria-hidden="true" class="paperbits-icon paperbits-simple-remove"></i>
             Delete color stop
         </button>
     </div>
