--- a/src/workshops/gradients/gradientSelector.html
+++ b/src/workshops/gradients/gradientSelector.html
@@ -5,7 +5,7 @@
     <div class="palette" role="list">
         <div class="color-box" data-bind="css: { selected: !$component.selectedGradientKey() }, tooltip: 'Clear gradient'">
             <a href="#" role="listitem" class="color" data-bind="click: $component.clearGradients, focus: true">
-                <i class="paperbits-icon paperbits-ban"></i>
+                <i aria-hidden="true" class="paperbits-icon paperbits-ban"></i>
             </a>
         </div>
 
