--- a/src/workshops/icons/glyph-input/glyph-input.html
+++ b/src/workshops/icons/glyph-input/glyph-input.html
@@ -9,7 +9,7 @@
             data-bind="text: selectedIconDisplay, balloon: { component: { name: 'glyph-selector', params: { fonts: [$component.iconFont()], onSelect: $component.onGlyphSelected } }, position: 'right' }">
         </a>
         <!-- <div class="input-group-addon">
-            <i class="paperbits-icon paperbits-single-02"></i>
+            <i aria-hidden="true" class="paperbits-icon paperbits-single-02"></i>
         </div> -->
     </div>
 </div>
