--- a/src/workshops/icons/glyph-selector/glyph-selector.html
+++ b/src/workshops/icons/glyph-selector/glyph-selector.html
@@ -47,7 +47,7 @@
 
     <div class="flex-item btn-group">
         <button class="btn btn-default" data-bind="click: $component.selectNone">
-            <i class="paperbits-icon paperbits-ban"></i>
+            <i aria-hidden="true" class="paperbits-icon paperbits-ban"></i>
             None
         </button>
     </div>
