Fixed issue with background class when two or more background editors displayed.

--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -65,7 +65,7 @@
                 <!-- /ko -->
                 <style data-bind="jss: backgroundPreview"></style>
                 <a href="#" class="dropzone-showbox" alignment="center center" data-bind="alignment: { position: direction, onChange: onAlignmentChange }">
-                    <div class="fit background-preview"></div>
+                    <div class="fit" data-bind="css: backgroundClass"></div>
                 </a>
             </div>
         </div>
